--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Tileexpert</title>
-  <base href="/">
+  <base href="/tileexpertpage/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>@font-face{font-family:Body;font-style:normal;font-weight:500;src:url(Body.cb8bb863b2c80dda.woff) format("woff");font-display:swap}@font-face{font-family:Body;font-style:normal;font-weight:500;src:url(Body.40926aa32b214aab.woff2) format("woff2");font-display:swap}@font-face{font-family:Body;font-style:normal;font-weight:400;src:url(Body-Light.fcbbf579802ceaf6.woff) format("woff");font-display:swap}@font-face{font-family:Body;font-style:normal;font-weight:400;src:url(Body-Light.975aa5b315471957.woff2) format("woff2");font-display:swap}@font-face{font-family:Body;font-style:normal;font-weight:600;src:url(Body-Bold.307f5dac5a44a9d2.woff) format("woff");font-display:swap}@font-face{font-family:Body;font-style:normal;font-weight:600;src:url(Body-Bold.26d8dc1fc3eaebbc.woff2) format("woff2");font-display:swap}body{margin:0;font-family:Body,sans-serif;font-weight:500}:root{--mobile-width:414px}</style><link rel="stylesheet" href="styles.2874cf1128861e78.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.2874cf1128861e78.css"></noscript></head>
